# gcp_trader

./: .gitignore  CLAUDE.md
alpaca_trade_updates_proxy/: .env.example  .gitignore  Cargo.toml  Dockerfile  FIX_PLAN.md  README.md  test_proxy.py
alpaca_trade_updates_proxy/src/: main.rs
nautilus_news_trader/: .env  ADAPTER_MIGRATION.md  Dockerfile  TRACING.md  TRADE-NOTIFICATIONS.md  analyze_liquidity.py  check.sh  deploy-news-api.sh  deploy-update.sh  deploy.sh  news-api.service  news_api.py  pyproject.toml  requirements.txt  run_all_strategies.sh  run_news_trader.py  run_unified_trader.py  setup-trade-monitoring.sh  test_fake_news.py  test_health_check.py  test_trade_notification.py
nautilus_news_trader/actors/: __init__.py  pubsub_news_controller.py  pubsub_news_controller_10pct.py  unified_news_controller.py
nautilus_news_trader/backtest/: README.md  __init__.py  backtest_controller.py  data_provider.py  news_data.py  runner.py  test_synthetic.py
nautilus_news_trader/config/: strategies.yaml
nautilus_news_trader/shared/: __init__.py  base_controller.py  filters.py  polygon_client.py  trade_db.py
nautilus_news_trader/static/: index.html
nautilus_news_trader/static/assets/: index-Bwh9ymfK.js  index-CWV7rqTt.css  index-Cw2yIJYN.css  index-qLzfUq4V.js
nautilus_news_trader/strategies/: __init__.py  news_trend_strategy.py  news_volume_strategy.py
nautilus_news_trader/strategies/trend/: __init__.py  controller.py  run.py
nautilus_news_trader/strategies/volume_10pct/: __init__.py  controller.py  run.py
nautilus_news_trader/tests/: TEST_PLAN.md  robustness_active.sh  robustness_test.sh  run_tests.sh  send_test_news.py  send_test_news.sh  test_pubsub_burst.py  test_strategy_handlers.py
nautilus_news_trader/utils/: alpaca_health.py  compare_indicators.py  event_emitter.py  json_logging.py  trade_notifier.py  view_trades.py
polygon_proxy/firehose-proxy/: .env.example  Cargo.toml  Dockerfile  README.md  test_client.py  test_client_quick.py
(+147 files in other folders)
